src/styles/contactlist.css
.contactwrapper {
    display: flex !important;
    flex-direction: column;
    align-items: center;
    margin-top: 150px;
    height: 700px;
    overflow-y: auto;
}

.contact {
    display: grid !important;
    grid-template-columns: 100px 150px 200px;
    justify-content: center;
}

@media (width<=500px) {
    .contact {
        grid-template-columns: 50px 150px 150px;
        justify-content: center;
    }
}

@media (width<=420px) {
    .contact {
        grid-template-columns: 45px 100px 130px;
        justify-content: center;
    }
}

